new textures, hazel nuts, hazel gen

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.thicket.dowsing_rod": "Dowsing Rod",
+  "item.thicket.hazel_nut": "Hazel Nut",
 
   "block.thicket.hazel_planks": "Hazel Planks",
   "block.thicket.hazel_stairs": "Hazel Stairs",
@@ -16,7 +17,6 @@
   "block.thicket.stripped_hazel_wood": "Stripped Hazel Wood",
   "block.thicket.hazel_leaves": "Hazel Leaves",
   "block.thicket.hazel_sapling": "Hazel Sapling",
-
   "block.thicket.carved_hazel": "Carved Hazel",
 
   "creativetab.thicket_tab": "Thicket Tab"
