tweaking worldgen, added pocket knife

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.thicket.dowsing_rod": "Dowsing Rod",
   "item.thicket.hazel_nut": "Hazel Nut",
+  "item.thicket.pocket_knife": "Pocket Knife",
 
   "block.thicket.hazel_planks": "Hazel Planks",
   "block.thicket.hazel_stairs": "Hazel Stairs",
