hazel nut bundle, food properties

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -19,6 +19,7 @@
   "block.thicket.hazel_leaves": "Hazel Leaves",
   "block.thicket.hazel_sapling": "Hazel Sapling",
   "block.thicket.carved_hazel": "Carved Hazel",
+  "block.thicket.hazel_nut_bundle": "Hazel Nut Bundle",
 
   "creativetab.thicket_tab": "Thicket Tab"
 }
