carved oak block

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -3,6 +3,9 @@
   "item.thicket.hazelnut": "Hazelnut",
   "item.thicket.pocket_knife": "Pocket Knife",
 
+
+  "block.thicket.carved_oak": "Carved Oak",
+
   "block.thicket.hazel_planks": "Hazel Planks",
   "block.thicket.hazel_stairs": "Hazel Stairs",
   "block.thicket.hazel_slab": "Hazel Slab",
