added signs, fml

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -27,6 +27,8 @@
   "block.thicket.hazel_fence": "Hazel Fence",
   "block.thicket.hazel_fence_gate": "Hazel Fence Gate",
   "block.thicket.hazel_door": "Hazel Door",
+  "block.thicket.hazel_sign": "Hazel Sign",
+  "block.thicket.hazel_hanging_sign": "Hazel Hanging Sign",
   "block.thicket.hazel_trapdoor": "Hazel Trapdoor",
   "item.thicket.hazel_boat": "Hazel Boat",
   "item.thicket.hazel_chest_boat": "Hazel Chest Boat",
