fixed missing recipes and hazel carving translation

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -19,7 +19,7 @@
   "block.thicket.stripped_hazel_log": "Stripped Hazel Log",
   "block.thicket.stripped_hazel_wood": "Stripped Hazel Wood",
   "block.thicket.hazel_planks": "Hazel Planks",
-  "block.thicket.carved_hazel": "Carved Hazel",
+  "block.thicket.hazel_carving": "Hazel Carving",
   "block.thicket.hazel_slab": "Hazel Slab",
   "block.thicket.hazel_stairs": "Hazel Stairs",
   "block.thicket.hazel_button": "Hazel Button",
