added firemilk mushrooms

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -38,6 +38,8 @@
   "item.thicket.hazelbutter": "Hazelbutter",
   "item.thicket.hazelbutter_treat": "Hazelbutter Treat",
 
+  "block.thicket.firemilk_mushroom": "Firemilk Mushroom",
+
   "block.thicket.walnut_bundle": "Walnut Bundle",
 
   "creativetab.thicket_tab": "Thicket Tab",
