updated carvings better compat controls hazel beam firemilk awkward potion

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -40,6 +40,7 @@
 
   "block.thicket.firemilk_mushroom": "Firemilk Mushroom",
 
+  "block.thicket.hazel_beam": "Hazel Beam",
   "block.thicket.walnut_bundle": "Walnut Bundle",
 
   "creativetab.thicket_tab": "Thicket Tab",
