--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -38,6 +38,27 @@
   "item.thicket.hazelbutter": "Hazelbutter",
   "item.thicket.hazelbutter_treat": "Hazelbutter Treat",
 
+  "block.thicket.sassafras_sapling": "Sassafras Sapling",
+  "block.thicket.sassafras_leaves": "Sassafras Leaves",
+  "block.thicket.sassafras_log": "Sassafras Log",
+  "block.thicket.sassafras_wood": "Sassafras Wood",
+  "block.thicket.stripped_sassafras_log": "Stripped Sassafras Log",
+  "block.thicket.stripped_sassafras_wood": "Stripped Sassafras Wood",
+  "block.thicket.sassafras_planks": "Sassafras Planks",
+  "block.thicket.sassafras_carving": "Sassafras Carving",
+  "block.thicket.sassafras_slab": "Sassafras Slab",
+  "block.thicket.sassafras_stairs": "Sassafras Stairs",
+  "block.thicket.sassafras_button": "Sassafras Button",
+  "block.thicket.sassafras_pressure_plate": "Sassafras Pressure Plate",
+  "block.thicket.sassafras_fence": "Sassafras Fence",
+  "block.thicket.sassafras_fence_gate": "Sassafras Fence Gate",
+  "block.thicket.sassafras_door": "Sassafras Door",
+  "block.thicket.sassafras_sign": "Sassafras Sign",
+  "block.thicket.sassafras_hanging_sign": "Sassafras Hanging Sign",
+  "block.thicket.sassafras_trapdoor": "Sassafras Trapdoor",
+  "item.thicket.sassafras_boat": "Sassafras Boat",
+  "item.thicket.sassafras_chest_boat": "Sassafras Chest Boat",
+
   "block.thicket.firemilk_mushroom": "Firemilk Mushroom",
 
   "block.thicket.hazel_beam": "Hazel Beam",
