--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -60,6 +60,8 @@
   "item.thicket.sassafras_chest_boat": "Sassafras Chest Boat",
 
   "block.thicket.firemilk_mushroom": "Firemilk Mushroom",
+  "block.thicket.mistletoe_leaves": "Mistletoe Leaves",
+  "item.thicket.mistletoe": "Mistletoe",
 
   "block.thicket.hazel_beam": "Hazel Beam",
   "block.thicket.walnut_bundle": "Walnut Bundle",
