--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -60,6 +60,7 @@
   "item.thicket.sassafras_chest_boat": "Sassafras Chest Boat",
 
   "block.thicket.firemilk_mushroom": "Firemilk Mushroom",
+  "block.thicket.blooming_mistletoe_leaves": "Blooming Mistletoe Leaves",
   "block.thicket.mistletoe_leaves": "Mistletoe Leaves",
   "item.thicket.mistletoe": "Mistletoe",
 
