added suspicious roots

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.thicket.pocket_knife": "Pocket Knife",
   "item.thicket.gold_sickle": "Gold Sickle",
+  "item.thicket.apocryphal_template": "Apocryphal Template",
   "item.thicket.cruxwood_pickaxe": "Cruxwood Pickaxe",
   "item.thicket.cruxwood_shovel": "Cruxwood Shovel",
   "item.thicket.cruxwood_axe": "Cruxwood Axe",
@@ -71,6 +72,7 @@
   "block.thicket.mistletoe_leaves": "Mistletoe Leaves",
   "item.thicket.mistletoe": "Mistletoe",
   "item.thicket.enchanted_mistletoe": "Mistletoe",
+  "block.thicket.suspicious_roots": "Suspicious Roots",
 
   "block.thicket.hazel_beam": "Hazel Beam",
   "block.thicket.walnut_bundle": "Walnut Bundle",
