arrowblockitem and other fixes

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -74,6 +74,7 @@
   "block.thicket.mistletoe_leaves": "Mistletoe Leaves",
   "item.thicket.mistletoe": "Mistletoe",
   "item.thicket.enchanted_mistletoe": "Mistletoe",
+  "block.thicket.hanging_mistletoe": "Mistletoe",
   "block.thicket.suspicious_roots": "Suspicious Roots",
 
   "block.thicket.hazel_beam": "Hazel Beam",
