resource/data bugfixees

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -70,7 +70,7 @@
   "block.thicket.myrrh_trapdoor": "Myrrh Trapdoor",
   "item.thicket.myrrh_boat": "Myrrh Boat",
   "item.thicket.myrrh_chest_boat": "Myrrh Chest Boat",
-  "block.thicket.myrrh_resin_bundle": "Myrrh Resin Bundle",
+  "block.thicket.myrrh_bundle": "Myrrh Bundle",
   "item.thicket.myrrh_resin": "Myrrh Resin",
 
   "block.thicket.sassafras_sapling": "Sassafras Sapling",
