final prep for build

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -109,7 +109,7 @@
   "block.thicket.hazel_beam": "Hazel Beam",
   "block.thicket.walnut_bundle": "Walnut Bundle",
 
-  "creativetab.thicket_tab": "Thicket Tab",
+  "creativetab.thicket_tab": "Thicket",
 
   "entity.thicket.mod_chest_boat": "Chest Boat",
 
