texture updates and windswept carvings

--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -108,6 +108,9 @@
 
   "block.thicket.hazel_beam": "Hazel Beam",
   "block.thicket.walnut_bundle": "Walnut Bundle",
+  "block.thicket.chestnut_carving": "Chestnut Carving",
+  "block.thicket.holly_carving": "Holly Carving",
+  "block.thicket.pine_carving": "Pine Carving",
 
   "creativetab.thicket_tab": "Thicket",
 
