--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -103,6 +103,7 @@
   "item.thicket.boswellia_chest_boat": "Boswellia Chest Boat",
   "block.thicket.frankincense_bundle": "Frankincense Bundle",
   "item.thicket.frankincense_resin": "Frankincense Resin",
+  "block.thicket.heliotrope": "Heliotrope",
 
   "block.thicket.sassafras_sapling": "Sassafras Sapling",
   "block.thicket.sassafras_leaves": "Sassafras Leaves",
