--- a/src/main/resources/assets/thicket/lang/en_us.json
+++ b/src/main/resources/assets/thicket/lang/en_us.json
@@ -103,6 +103,7 @@
   "item.thicket.boswellia_chest_boat": "Boswellia Chest Boat",
   "block.thicket.frankincense_bundle": "Frankincense Bundle",
   "item.thicket.frankincense_resin": "Frankincense Resin",
+  "item.thicket.sunflower_oil": "Sunflower Oil",
   "item.thicket.anointing_oil": "Anointing Oil",
   "block.thicket.heliotrope": "Heliotrope",
 
